--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -2,8 +2,11 @@
   opacity: 1 !important;
 }
 
+.q-table__subtitle {
+  margin-bottom: 12px;
+}
+
 .q-table table {
-  border: 1px solid #ccc;
   border-collapse: collapse;
   margin: 0;
   padding: 0;
@@ -20,13 +23,12 @@
 }
 
 .q-table {
-  table tr {
+  table tbody tr {
     border: 1px solid #e9e9ee;
-    padding: .35em;
   }
   table th,
   table td {
-    padding: .625em;
+    padding: 4px;
   }
   table th {
   }
@@ -35,9 +37,6 @@
 .q-table--card-layout {
   table {
     border: 0;
-  }
-  table caption {
-    font-size: 1.3em;
   }
   table thead {
     border: none;
@@ -51,7 +50,7 @@
   }
   table tr {
     display: block;
-    margin-bottom: .625em;
+    margin-bottom: 6px;
   }
   table td {
     display: block;
@@ -64,6 +63,7 @@
     */
     content: attr(data-label);
     float: left;
+    font-weight: 500;
   }
   table td:last-child {
     border-bottom: 0;
