--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -6,31 +6,35 @@
   margin-bottom: 12px;
 }
 
-.q-table table {
-  border-collapse: collapse;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  table-layout: fixed;
-}
-
 .q-table__cell {
-  text-align: left;
+  text-align: left !important;
 }
 
 .q-table__cell--numeric {
-  text-align: right;
+  text-align: right !important;
 }
 
 .q-table {
+  table {
+    border-collapse: collapse;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    table-layout: auto;
+  }
+  table thead {
+    background: unset;
+  }
   table tbody tr {
     border: 1px solid #e9e9ee;
   }
   table th,
   table td {
     padding: 4px;
+    border: 0 !important;
   }
   table th {
+    font-weight: unset;
   }
 }
 
