--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -61,17 +61,22 @@
     margin-bottom: 6px;
   }
   table td {
-    display: flex;
-    justify-content: space-between;
+    display: block;
+    text-align: right !important;
   }
-  table td:before {
+  table td::before {
     /*
     * aria-label has no advantage, it won't be read inside a table
     content: attr(aria-label);
     */
     content: attr(data-label);
-    // float: left;
+    float: left;
     font-weight: 500;
+  }
+  table td::after {
+    content: '';
+    display: block;
+    clear: both;
   }
   table td:last-child {
     border-bottom: 0;
