--- a/views/table.html
+++ b/views/table.html
@@ -3,17 +3,19 @@
   {%- if item.subtitle and item.subtitle !== '' %}
     <div class="q-table__subtitle s-font-note">{{ item.subtitle }}</div>
   {%- endif %}
-  <table>
+  <table class="q-table__table">
+    {%- if item.options.hideTableHeader !== true %}
     <thead>
       {%- for head in item.data[0] %}
         <th class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }} s-font-note s-font-note--strong">{{ head.value }}</th>
       {%- endfor %}
     </thead>
+    {%- endif %}
     <tbody>
       {%- for row in item.data.slice(1) %}
         <tr>
           {%- for cell in row %}
-            <td data-label="{{ item.data[0][loop.index0].value }}" class="q-table__cell q-table__cell--{{ cell.type }} s-font-note">{{ cell.value }}</td>
+            <td {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}"{% endif %} class="q-table__cell q-table__cell--{{ cell.type }} s-font-note">{{ cell.value }}</td>
           {%- endfor %}
         </tr>
       {%- endfor %}
