--- a/views/table.html
+++ b/views/table.html
@@ -1,5 +1,5 @@
 <div class="s-q-item q-table {% if initWithCardLayout %}q-table--card-layout{% endif %}" id="{{ id }}" style="opacity: 0;">
-  <h3 class="s-q-item__title">{{ item.title }}</h3>
+  {% if displayOptions.hideTitle !== true %}<h3 class="s-q-item__title">{{ item.title }}</h3>{% endif %}
   {%- if item.subtitle and item.subtitle !== '' %}
     <div class="q-table__subtitle s-font-note">{{ item.subtitle }}</div>
   {%- endif %}
