--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -14,6 +14,8 @@
   text-align: right !important;
 }
 
+// the high specificty is needed because nzz frontends apply lots of highly specific table styles we need to overwrite
+// this will change in the future and allow us to lower the specificity here again
 .q-table {
   table {
     border-collapse: collapse;
@@ -32,12 +34,12 @@
     border-style: solid;
     border-color: #e9e9ee;
   }
-  table th,
-  table td {
-    padding: 4px;
+  table th, table td {
+    padding: 10px 4px;
     border: none !important;
-  }
-  table th {
+
+    font-size: unset;
+    line-height: unset;
     font-weight: unset;
   }
 }
@@ -58,13 +60,20 @@
   }
   table tr {
     display: block;
-    margin-bottom: 6px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    &:first-child {
+      padding-top: 0;
+    }
   }
   table td {
     display: block;
   }
+  table th, table td {
+    padding: 4px 0; // overwrite the padding from outside card-layout
+  }
 
-  table > tbody:first-child {
+  tbody:first-child {
     td {
       text-align: left !important;
     }
@@ -72,7 +81,7 @@
 
   // apply the label pseudo element and changed text-align only if we have a head
   // we do not have a head if the option hideTableHeader is set to true
-  table thead + tbody {
+  thead + tbody {
     td {
       text-align: right !important;
     }
@@ -85,13 +94,13 @@
       float: left;
       font-weight: 500;
     }
-    table td::after {
+    td::after {
       content: '';
       display: block;
       clear: both;
     }
   }
-  table td:last-child {
+  tbody tr:last-child {
     border-bottom: 0;
   }
 }
