force left align for card layout column headers

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -93,6 +93,8 @@
       content: attr(data-label);
       float: left;
       font-weight: 500;
+      max-width: 80%;
+      text-align: left !important;
     }
     td::after {
       content: '';
