--- a/views/table.html
+++ b/views/table.html
@@ -1,23 +1,23 @@
 <div class="s-q-item q-table {% if initWithCardLayout %}q-table--card-layout{% endif %}" id="{{ id }}" style="opacity: 0;">
-  {% if displayOptions.hideTitle !== true %}<h3 class="s-q-item__title">{{ item.title }}</h3>{% endif %}
-  {%- if item.subtitle and item.subtitle !== '' %}
-    <div class="q-table__subtitle s-font-note">{{ item.subtitle }}</div>
+  {% if displayOptions.hideTitle !== true %}
+  <h3 class="s-q-item__title">{{ item.title }}</h3>{% endif %} {%- if item.subtitle and item.subtitle !== '' %}
+  <div class="q-table__subtitle s-font-note">{{ item.subtitle }}</div>
   {%- endif %}
   <table class="q-table__table">
     {%- if item.options.hideTableHeader !== true %}
     <thead class="s-font-note s-font-note--strong">
       {%- for head in item.data[0] %}
-        <th class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }}">{{ head.value }}</th>
+      <th class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }}">{{ head.value }}</th>
       {%- endfor %}
     </thead>
     {%- endif %}
     <tbody class="s-font-note">
       {%- for row in item.data.slice(1) %}
-        <tr>
-          {%- for cell in row %}
-            <td {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}"{% endif %} class="q-table__cell q-table__cell--{{ cell.type }}">{{ cell.value }}</td>
-          {%- endfor %}
-        </tr>
+      <tr>
+        {%- for cell in row %}
+        <td {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} class="q-table__cell q-table__cell--{{ cell.type }}" {% if numberOfRowsToHide and loop.index > (item.data.length - numberOfRowsToHide) %}style="display: none;"{% endif %}">{{ cell.value }}</td>
+        {%- endfor %}
+      </tr>
       {%- endfor %}
     </tbody>
   </table>
