fix: cells show the text top vertical aligned (#13)

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -43,8 +43,8 @@ td.q-table__cell--numeric {
   table th,
   table td {
     padding: 10px 4px;
+    vertical-align: top;
     border: none !important;
-
     font-size: unset;
     line-height: unset;
     font-weight: unset;
