--- a/views/table.html
+++ b/views/table.html
@@ -13,7 +13,7 @@
     {%- endif %}
     <tbody class="s-font-note">
       {%- for row in item.data.slice(1) %}
-      <tr {% if numberOfRowsToHide and loop.index >= (item.data.length - numberOfRowsToHide) %}style="display: none;"{% endif %}>
+      <tr {% if numberOfRowsToHide and loop.index >= (item.data.length - numberOfRowsToHide) %}style="visibility: collapse"{% endif %}>
         {%- for cell in row %}
         <td {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} class="q-table__cell q-table__cell--{{ cell.type }}">{{ cell.value }}</td>
         {%- endfor %}
