--- a/views/table.html
+++ b/views/table.html
@@ -7,9 +7,7 @@
     {%- if item.options.hideTableHeader !== true %}
     <thead class="s-font-note s-font-note--strong">
       {%- for head in item.data[0] %}
-      <th 
-        class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }}"
-        {% if head.padding !== 0 or initWithCardLayout == false %}style="padding-left: {{ head.padding }}rem;"{% endif %}>
+      <th class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }}">
           {{ head.value }}
       </th> 
       {%- endfor %}
@@ -21,8 +19,7 @@
         {%- for cell in row %}
         <td 
           {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
-          class="q-table__cell q-table__cell--{{ cell.type }}"
-          {% if cell.padding !== 0 or initWithCardLayout == false %}style="padding-left: {{ cell.padding }}rem;"{% endif %}>
+          class="q-table__cell q-table__cell--{{ cell.type }}">
           {{ cell.value }} 
         </td>
         {%- endfor %}
