--- a/views/table.html
+++ b/views/table.html
@@ -15,7 +15,7 @@
     {%- endif %}
     <tbody class="s-font-note">
       {%- for row in item.data.slice(1) %}
-      <tr {% if numberOfRowsToHide and loop.index >= (item.data.length - numberOfRowsToHide) %}style="visibility: collapse"{% endif %}>
+      <tr {% if numberOfRowsToHide and loop.index >= (item.data.length - numberOfRowsToHide) %}style="display: none;"{% endif %}>
         {%- for cell in row %}
         <td 
           {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
