--- a/views/table.html
+++ b/views/table.html
@@ -18,6 +18,7 @@
     {%- endif %}
     <tbody class="s-font-note">
       {%- for row in item.data.slice(1) %}
+      {% set row_loop = loop %}
       <tr {% if numberOfRowsToHide and loop.index >= (item.data.length - numberOfRowsToHide) %}style="display: none;"{% endif %}>
         {%- for cell in row %}
         <td 
@@ -30,7 +31,9 @@
         </td>
           {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}  
            <td class="q-table-minibar-cell">
-             <div class="q-table-minibar-valuebox" style="width: 15%">&nbsp;</div>
+             <div class="q-table-minibar-valuebox--{{minibarValues[row_loop.index].type}}"  style="width: {{minibarValues[row_loop.index].value}}%">
+              &nbsp;
+             </div>
            </td> 
           {%- endif %}
         {%- endfor %}
@@ -40,3 +43,7 @@
   </table>
   {% include "./footer.html" %}
 </div>
+
+<script>
+
+</script>
