defined types for variable table displays

--- a/views/table.html
+++ b/views/table.html
@@ -8,8 +8,10 @@
     <thead class="s-font-note s-font-note--strong">
       {%- for head in item.data[0] %}
       <th class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }}"
-      {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}
+      {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) and (minibar.type !== "mixed") %}
       colspan="2" id="q-table-minibar-header"
+      {% elif (minibar.type === "mixed") %}
+      id="q-table-minibar-header"
       {% endif %}>
           {{ head.value }}
       </th> 
@@ -21,7 +23,8 @@
       {% set row_loop = loop %}
       <tr {% if numberOfRowsToHide and loop.index >= (item.data.length - numberOfRowsToHide) %}style="display: none;"{% endif %}>
         {%- for cell in row %}
-        <td 
+        <td>{{minibar.type}}</td>
+        <!-- <td 
           {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
           class="q-table__cell q-table__cell--{{ cell.type }}
           {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %} 
@@ -31,11 +34,11 @@
         </td>
           {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}  
            <td class="q-table-minibar-cell">
-             <div class="q-table-minibar-valuebox--{{minibarValues[row_loop.index].type}}"  style="width: {{minibarValues[row_loop.index].value}}%">
+             <div class="q-table-minibar-valuebox--{{minibar.values[row_loop.index].type}}"  style="width: {{minibar.values[row_loop.index].value}}%">
               &nbsp;
              </div>
            </td> 
-          {%- endif %}
+          {%- endif %} -->
         {%- endfor %}
       </tr>
       {%- endfor %}
