--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -141,6 +141,21 @@ tr.q-table-state-visible {
   display: table-row !important;
 }
 
+.q-table-minibar--positive {
+  position: relative;
+  left: 50%;
+}
+
+.q-table-minibar--negative {
+  position: relative;
+  right: 50%;
+}
+
+.q-table-minibar--mixed {
+  min-width: 180px;
+  background-color:rgba(216, 216, 216, 0.15);
+}
+
 #q-table-minibar-header {
   text-align: center !important;
 }
@@ -160,4 +175,20 @@ tr.q-table-state-visible {
 
 .q-table-minibar-valuebox--negative {
   background-color: #b23c39;
+  float: right;
+}
+
+.q-table-minibar-alignment--positive {
+  width: 50%;
+  text-align: right;
+  padding-right: 4px;
+}
+
+.q-table-minibar-alignment--negative {
+  width: 50%;
+  position: relative;
+  left: 50%;
+  text-align: left;
+  padding-left: 4px;
+  float: left;
 }
