hyphen(-) will be shown centered

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -192,3 +192,8 @@ tr.q-table-state-visible {
   padding-left: 4px;
   float: left;
 }
+
+.q-table-minibar-alignment--empty {
+  width: 100%;
+  text-align: center !important;
+}
