--- a/views/table.html
+++ b/views/table.html
@@ -40,7 +40,7 @@
             
             {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}  
               {% if (minibar.values[row_loop.index].type !== "empty") %}
-                <div class="q-table-minibar-valuebox--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}}"  
+                <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}}"  
                 style="width: {{minibar.values[row_loop.index].value / 2 }}%">
                     &nbsp;
                 </div>           
@@ -59,11 +59,10 @@
             </td>
             {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}  
               <td class="q-table-minibar-cell">
-                <div class="q-table-minibar-valuebox--{{minibar.values[row_loop.index].type}}"  
+                <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}"  
                 {% if (minibar.values[row_loop.index].type !== "empty") %}
                 style="width: {{minibar.values[row_loop.index].value}}%"
                 {% endif %}>
-                    &nbsp;
                 </div>
               </td> 
             {%- endif %} 
