--- a/views/table.html
+++ b/views/table.html
@@ -37,7 +37,6 @@
               {{ cell.value }}
               </div>
             {% endif %}
-            
             {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}  
               {% if (minibar.values[row_loop.index].type !== "empty") %}
                 <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} q-table-minibar--{{minibar.values[row_loop.index].type}}"  
@@ -49,23 +48,43 @@
               </td>
             {%- endif %} 
           {% else %}
-            <td 
-            {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
-            class="q-table__cell q-table__cell--{{ cell.type }}
-            {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %} 
-            q-table-minibar-cell--value
-            {% endif %}">
-              {{ cell.value }} 
-            </td>
-            {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}  
-              <td class="q-table-minibar-cell">
-                <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}"  
-                {% if (minibar.values[row_loop.index].type !== "empty") %}
-                style="width: {{minibar.values[row_loop.index].value}}%"
-                {% endif %}>
-                </div>
-              </td> 
-            {%- endif %} 
+            {%- if minibar.type==="positive"%}
+              <td 
+              {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
+              class="q-table__cell q-table__cell--{{ cell.type }}
+              {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %} 
+              q-table-minibar-cell--value" style="padding-left: 12px;
+              {% endif %}">
+                {{ cell.value }} 
+              </td>
+              {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}  
+                <td class="q-table-minibar-cell" style="padding-right: 12px;">
+                  <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}"  
+                  {% if (minibar.values[row_loop.index].type !== "empty") %}
+                  style="width: {{minibar.values[row_loop.index].value}}%"
+                  {% endif %}>
+                  </div>
+                </td> 
+              {%- endif %} 
+            {% else %} 
+                {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %}  
+                <td class="q-table-minibar-cell" style="padding-left: 12px; padding-right: 0px !important;">
+                  <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}}"  
+                  {% if (minibar.values[row_loop.index].type !== "empty") %}
+                  style="width: {{minibar.values[row_loop.index].value}}%"
+                  {% endif %}>
+                  </div>
+                </td> 
+              {%- endif %} 
+              <td 
+              {% if item.options.hideTableHeader !== true %}data-label="{{ item.data[0][loop.index0].value }}" {% endif %} 
+              class="q-table__cell q-table__cell--{{ cell.type }}
+              {%- if (item.options.minibarOptions+2 === loop.index) and (item.options.minibarOptions != null) %} 
+              q-table-minibar-cell--value" style="padding-right: 12px;
+              {% endif %}">
+                {{ cell.value }} 
+              </td>
+            {% endif %}
           {% endif %}
         {%- endfor %}
       </tr>
