--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -214,3 +214,7 @@ tr.q-table-state-visible {
   width: 100%;
   text-align: center !important;
 }
+
+.q-table-minibar-hidden {
+  display: none;
+}
