--- a/views/table.html
+++ b/views/table.html
@@ -28,16 +28,16 @@
             {% if item.options.hideTableHeader !== true %}
               data-label="{{ item.data[0][loop.index0].value }}" 
             {% endif %} 
-            class="q-table__cell
+            class="q-table__cell 
             {% if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null %}
               q-table-minibar--mixed">
               <div class="q-table-minibar-alignment--{{minibar.values[row_loop.index].type}} q-table__cell q-table__cell--{{cell.type}}">
               {{ cell.value }}
               </div>
-            {% else %}">
-              <div class="q-table__cell q-table__cell--{{cell.type}}">
+            {% else %}q-table__cell--{{cell.type}}">
+              
               {{ cell.value }}
-              </div>
+             
             {% endif %}
             {%- if item.options.minibarOptions+2 === loop.index and item.options.minibarOptions != null %}  
               {% if minibar.values[row_loop.index].type !== "empty" %}
